--- a/index.html
+++ b/index.html
@@ -4,63 +4,28 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
     <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
     <div class="wrapper">
-      <h1 class="h1">Kim birinchi borishga!</h1>
-      <div class="dis">
-        <p>Masofa:</p>
-        <form class="form">
-          <input class="num" type="number" />
-          <input class="sub" type="submit" />
-        </form>
-      </div>
+      <h1 class="h1">Elementni Bosing!</h1>
       <div class="cards">
-        <div class="card">
-          <img
-            width="80"
-            height="80"
-            src="./img/free-icon-man-walking-16419629.png"
-            alt=""
-          />
-          <p class="p">Piyoda</p>
-          <h2 class="h2 man">N soat</h2>
-        </div>
-        <div class="card">
-          <img
-            width="80"
-            height="80"
-            src="./img/free-icon-mountain-bike-2772611.png"
-            alt=""
-          />
-          <p class="p">Velosiped</p>
-          <h2 class="h2 bike">N soat</h2>
-        </div>
-        <div class="card">
-          <img
-            width="80"
-            height="80"
-            src="./img/free-icon-car-3664538.png"
-            alt=""
-          />
-          <p class="p">Mashina</p>
-          <h2 class="h2 car">N soat</h2>
-        </div>
-        <div class="card">
-          <img
-          class="plane"
-            width="70"
-            height="70"
-            src="./img/free-icon-airplane-31069.png"
-            alt=""
-          />
-          <p class="p">Samalyot</p>
-          <h2 class="h2 saml">N soat</h2>
-        </div>
+        <div class="card"></div>
+        <div class="card1"></div>
+        <div class="card2"></div>
       </div>
     </div>
-
+    <form >
+      <fieldset>
+        <legend>hello</legend>
+        <input type="text" class="in">
+      </fieldset>
+    </form>
+    <script
+      type="text/javascript"
+      src="https://cdn.jsdelivr.net/npm/toastify-js"
+    ></script>
     <script src="./style.js"></script>
   </body>
 </html>
